syntax = "proto3";
package proto;
option go_package = "github.com/joebui/go-blogging/article-svc/pb";

service ArticleSvc {
  rpc GetAllArticles (GetAllArticlesRequest) returns (GetAllArticlesResponse) {}
  rpc GetArticle (GetArticleRequest) returns (GetArticleResponse) {}
}

message GetAllArticlesRequest {
  int32 page = 1;
  int32 limit = 2;
}

message GetArticleRequest {
  string id = 1;
}

message GetAllArticlesResponse {
  repeated Article articles = 1;
}

message GetArticleResponse {
  Article article = 1;
}

message Article {
  string id = 1;
  string title = 2;
  optional string subtitle = 3;
  optional string content = 4;
  string author_id = 5;
  string created_at = 6;
  string updated_at = 7;
}
